--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -27,10 +27,6 @@
             <MudNavLink Href="/admin/Questions" Icon="@Icons.Material.Filled.QuestionAnswer">Questions</MudNavLink>
             <MudNavLink Href="/admin/questionsv2" Icon="@Icons.Material.Filled.QueryBuilder">Questions V2</MudNavLink>
             <MudNavLink Href="/admin/corrections" Icon="@Icons.Material.Filled.QuestionMark">Corrections</MudNavLink>
-            <MudNavLink Href="/admin/Articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
-            <MudNavLink Href="/admin/roles" Icon="@Icons.Material.Filled.LocalParking">Roles</MudNavLink>
-            <MudNavLink Href="/admin/subscriptions" Icon="@Icons.Material.Filled.Subscriptions">Subscriptions</MudNavLink>
-            <MudNavLink Href="/admin/usersubscriptions" Icon="@Icons.Material.Filled.SupervisedUserCircle">User Subscriptions</MudNavLink>
 
             @* <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
@@ -49,7 +45,7 @@
             <AuthorizeView Roles="">
                 <MudNavLink Href="/admin/usersubscriptions" Icon="@Icons.Material.Filled.SupervisedUserCircle">User Subscriptions</MudNavLink>
             </AuthorizeView> *@
-            <MudNavLink Href="/home" Icon="@Icons.Material.Filled.ArrowUpward">Go To Medbase</MudNavLink>
+            <MudNavLink Href="/" Icon="@Icons.Material.Filled.ArrowUpward">Go To Medbase</MudNavLink>
         </MudNavMenu>
     </MudDrawer>
     <MudMainContent>
