--- a/Pages/WebLayout.razor
+++ b/Pages/WebLayout.razor
@@ -17,7 +17,7 @@
 <MudLayout>
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudLink Typo="Typo.h6" Class="ml-3" Href="/home" Color="Color.Inherit">
+        <MudLink Typo="Typo.h6" Class="ml-3" Href="/" Color="Color.Inherit">
             Medbase
         </MudLink>
         <MudSpacer />
