Blazor Server to current settings, added course selection page to components

--- a/Pages/Admin/AdminEssays.razor
+++ b/Pages/Admin/AdminEssays.razor
@@ -2,6 +2,7 @@
 @layout AdminLayout
 @inject IApiRepository repository
 @inject IEssaysRepository essaysRepository
+@using MedbaseLibrary.Essays
 
 <PageTitle>Admin Essays</PageTitle>
 
