--- a/Pages/Admin/AdminNotes.razor
+++ b/Pages/Admin/AdminNotes.razor
@@ -2,6 +2,7 @@
 @layout AdminLayout
 @inject IApiRepository repository
 @inject INotesRepository notesRepository
+@using MedbaseLibrary.Notes
 
 <PageTitle>Admin Notes</PageTitle>
 
