--- a/Pages/Admin/Editors/EssaysEditor.razor
+++ b/Pages/Admin/Editors/EssaysEditor.razor
@@ -5,6 +5,7 @@
 @inject IEssaysRepository essaysRepository
 @inject IApiRepository repository
 @using Markdig
+@using MedbaseLibrary.Essays
 
 <PageTitle>Admin | Notes Editor</PageTitle>
 
