--- a/Pages/Admin/Editors/NotesEditor.razor
+++ b/Pages/Admin/Editors/NotesEditor.razor
@@ -2,6 +2,7 @@
 @page "/admin/notes/add"
 @layout AdminLayout
 @using MedbaseBlazor.Pages.Admin.Utilities
+@using MedbaseLibrary.Notes
 @inject INotesRepository notesRepository
 @inject IApiRepository repository
 @inject ISnackbar Snackbar
