--- a/Routes.razor
+++ b/Routes.razor
@@ -3,12 +3,10 @@
 @using MedbaseComponents.Controls
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Routes).Assembly"
-        AdditionalAssemblies="new[]{typeof(MedbaseComponents.Pages.User.Questions).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Topics).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Notes).Assembly, 
-    typeof(MedbaseComponents.Pages.User.Articles).Assembly}">
+        AdditionalAssemblies="new[]{typeof(MedbaseComponents.Pages.Questions).Assembly, 
+    typeof(MedbaseComponents.Pages.Topics).Assembly}">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(SharedLayout)" />
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(WebLayout)" />
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
     </Router>
